compiler/testData/diagnostics/tests/sealed/RedundantAbstract.kt
// FIR_IDENTICAL
<!REDUNDANT_MODIFIER!>abstract<!> sealed class Base {

}